# apps/chat/viewset_serializers.py
@@ -18,11 +18,20 @@ class AttachedFileSerializer(serializers.ModelSerializer):
 
 class MessageSerializer(serializers.ModelSerializer):
     id = ObfuscatedIDField(read_only=True)
+    parentId = serializers.SerializerMethodField()
+    currentVersion = serializers.IntegerField(source="current_version", read_only=True)
+    totalVersions = serializers.IntegerField(source="total_versions", read_only=True)
 
     class Meta:
         model = Message
-        fields = ["id", "uid", "role", "content", "version", "created_at"]
+        fields = [
+            "id", "uid", "role", "content", "version", "created_at",
+            "parentId", "currentVersion", "totalVersions",
+        ]
         read_only_fields = ["id", "uid", "created_at"]
+
+    def get_parentId(self, obj):
+        return obj.parent.uid if obj.parent_id else None
 
 
 class FeedbackSerializer(serializers.ModelSerializer):
@@ -36,7 +45,7 @@ class FeedbackSerializer(serializers.ModelSerializer):
 
 class ChatSessionSerializer(serializers.ModelSerializer):
     id = ObfuscatedIDField(read_only=True)
-    messages = MessageSerializer(many=True, read_only=True)
+    messages = serializers.SerializerMethodField()
 
     class Meta:
         model = ChatSession
@@ -47,6 +56,11 @@ class ChatSessionSerializer(serializers.ModelSerializer):
         if len(value) > 255:
             return value[:252] + "..."
         return value
+
+    def get_messages(self, instance):
+        from apps.chat.services import ChatService
+        branch = ChatService.get_active_branch(instance)
+        return MessageSerializer(branch, many=True).data
 
     def to_representation(self, instance):
         data = super().to_representation(instance)
